# PythonProject4

./: README.md  main.py  pyproject.toml
src/: masks.py  proccesing.py  widget.py
